// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useContractHeaderSetup should set up the header correctly for trade in dispute 1`] = `
<Header
  icons={[]}
  title="PC‑7B‑NAN"
/>
`;

exports[`useContractHeaderSetup should show the cancel icon if the contract can be cancelled 1`] = `
<Header
  icons={
    [
      {
        "color": "#9F8C82",
        "id": "xCircle",
        "onPress": [Function],
      },
    ]
  }
  title="PC‑7B‑NAN"
/>
`;

exports[`useContractHeaderSetup should show the confirm payment help icon if the contract is in the seller view and requires a payment 1`] = `
<Header
  icons={
    [
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [Function],
      },
    ]
  }
  title="PC‑7B‑1C8"
/>
`;

exports[`useContractHeaderSetup should show the make payment help icon if the contract is in the buyer view and requires a payment 1`] = `
<Header
  icons={
    [
      {
        "color": "#9F8C82",
        "id": "xCircle",
        "onPress": [Function],
      },
      {
        "color": "#099DE2",
        "id": "helpCircle",
        "onPress": [Function],
      },
    ]
  }
  title="PC‑7B‑1C8"
/>
`;
